[tool.poetry]
name = "scale-llm-engine"
version = "0.0.0.beta27"
description = "Scale LLM Engine Python client"
license = "Apache-2.0"
authors = ["Phil Chen <phil.chen@scale.com>"]
maintainers = ["Phil Chen <phil.chen@scale.com>"]
readme = "README.md"
homepage = "https://scaleapi.github.io/llm-engine/"
repository = "https://github.com/scaleapi/llm-engine"
packages = [{include = "llmengine"}]


[tool.poetry.dependencies]
python = "^3.7"
pydantic = ">=1.10"
aiohttp = "^3.8"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.17.2"
pytest-cov = "^3.0.0"
mypy = "^1.3.0"
pytest-mypy = "^0.9.1"
pytest-mypy-plugins = "^1.10.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
